systemview-keyos/src/bindings.rs

#[test]
fn bindgen_test_layout_SEGGER_SYSVIEW_OS_API() {
    const UNINIT: ::core::mem::MaybeUninit<SEGGER_SYSVIEW_OS_API> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<SEGGER_SYSVIEW_OS_API>(),
        8usize,
        concat!("Size of: ", stringify!(SEGGER_SYSVIEW_OS_API))
    );
    assert_eq!(
        ::core::mem::align_of::<SEGGER_SYSVIEW_OS_API>(),
        4usize,
        concat!("Alignment of ", stringify!(SEGGER_SYSVIEW_OS_API))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).pfGetTime) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(SEGGER_SYSVIEW_OS_API), "::", stringify!(pfGetTime))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).pfSendTaskList) as usize - ptr as usize },
        4usize,
        concat!("Offset of field: ", stringify!(SEGGER_SYSVIEW_OS_API), "::", stringify!(pfSendTaskList))
    );
}
extern "C" {
    ///       Control and initialization functions
    pub fn SEGGER_SYSVIEW_Init(
        SysFreq: cty::c_ulong,
        CPUFreq: cty::c_ulong,
        pOSAPI: *const SEGGER_SYSVIEW_OS_API,
        pfSendSysDesc: SEGGER_SYSVIEW_SEND_SYS_DESC_FUNC,
        pUpBuffer: *mut cty::c_void,
        UpBufferSize: cty::c_ulong,
        pDownBuffer: *mut cty::c_void,
        DownBufferSize: cty::c_ulong,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_SetRAMBase(RAMBaseAddress: cty::c_ulong);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_Start();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_Stop();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_GetSysDesc();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_SendTaskList();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_SendTaskInfo(pInfo: *const SEGGER_SYSVIEW_TASKINFO);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_SendSysDesc(sSysDesc: *const cty::c_char);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_IsStarted() -> cty::c_int;
}
extern "C" {
    pub fn SEGGER_SYSVIEW_GetChannelID() -> cty::c_int;
}
extern "C" {
    ///       Event recording functions
    pub fn SEGGER_SYSVIEW_RecordVoid(EventId: cty::c_uint);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordU32(EventId: cty::c_uint, Para0: cty::c_ulong);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordU32x2(EventId: cty::c_uint, Para0: cty::c_ulong, Para1: cty::c_ulong);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordU32x3(
        EventId: cty::c_uint,
        Para0: cty::c_ulong,
        Para1: cty::c_ulong,
        Para2: cty::c_ulong,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordU32x4(
        EventId: cty::c_uint,
        Para0: cty::c_ulong,
        Para1: cty::c_ulong,
        Para2: cty::c_ulong,
        Para3: cty::c_ulong,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordU32x5(
        EventId: cty::c_uint,
        Para0: cty::c_ulong,
        Para1: cty::c_ulong,
        Para2: cty::c_ulong,
        Para3: cty::c_ulong,
        Para4: cty::c_ulong,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordU32x6(
        EventId: cty::c_uint,
        Para0: cty::c_ulong,
        Para1: cty::c_ulong,
        Para2: cty::c_ulong,
        Para3: cty::c_ulong,
        Para4: cty::c_ulong,
        Para5: cty::c_ulong,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordU32x7(
        EventId: cty::c_uint,
        Para0: cty::c_ulong,
        Para1: cty::c_ulong,
        Para2: cty::c_ulong,
        Para3: cty::c_ulong,
        Para4: cty::c_ulong,
        Para5: cty::c_ulong,
        Para6: cty::c_ulong,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordU32x8(
        EventId: cty::c_uint,
        Para0: cty::c_ulong,
        Para1: cty::c_ulong,
        Para2: cty::c_ulong,
        Para3: cty::c_ulong,
        Para4: cty::c_ulong,
        Para5: cty::c_ulong,
        Para6: cty::c_ulong,
        Para7: cty::c_ulong,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordU32x9(
        EventId: cty::c_uint,
        Para0: cty::c_ulong,
        Para1: cty::c_ulong,
        Para2: cty::c_ulong,
        Para3: cty::c_ulong,
        Para4: cty::c_ulong,
        Para5: cty::c_ulong,
        Para6: cty::c_ulong,
        Para7: cty::c_ulong,
        Para8: cty::c_ulong,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordU32x10(
        EventId: cty::c_uint,
        Para0: cty::c_ulong,
        Para1: cty::c_ulong,
        Para2: cty::c_ulong,
        Para3: cty::c_ulong,
        Para4: cty::c_ulong,
        Para5: cty::c_ulong,
        Para6: cty::c_ulong,
        Para7: cty::c_ulong,
        Para8: cty::c_ulong,
        Para9: cty::c_ulong,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordString(EventId: cty::c_uint, pString: *const cty::c_char);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordSystime();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordEnterISR();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordExitISR();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordExitISRToScheduler();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordEnterTimer(TimerId: cty::c_ulong);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordExitTimer();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordEndCall(EventID: cty::c_uint);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordEndCallU32(EventID: cty::c_uint, Para0: cty::c_ulong);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_OnIdle();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_OnTaskCreate(TaskId: cty::c_ulong);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_OnTaskTerminate(TaskId: cty::c_ulong);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_OnTaskStartExec(TaskId: cty::c_ulong);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_OnTaskStopExec();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_OnTaskStartReady(TaskId: cty::c_ulong);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_OnTaskStopReady(TaskId: cty::c_ulong, Cause: cty::c_uint);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_MarkStart(MarkerId: cty::c_uint);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_MarkStop(MarkerId: cty::c_uint);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_Mark(MarkerId: cty::c_uint);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_NameMarker(MarkerId: cty::c_uint, sName: *const cty::c_char);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_HeapDefine(
        pHeap: *mut cty::c_void,
        pBase: *mut cty::c_void,
        HeapSize: cty::c_uint,
        MetadataSize: cty::c_uint,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_HeapAlloc(
        pHeap: *mut cty::c_void,
        pUserData: *mut cty::c_void,
        UserDataLen: cty::c_uint,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_HeapAllocEx(
        pHeap: *mut cty::c_void,
        pUserData: *mut cty::c_void,
        UserDataLen: cty::c_uint,
        Tag: cty::c_uint,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_HeapFree(pHeap: *mut cty::c_void, pUserData: *mut cty::c_void);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_NameResource(ResourceId: cty::c_ulong, sName: *const cty::c_char);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_SendPacket(
        pPacket: *mut cty::c_uchar,
        pPayloadEnd: *mut cty::c_uchar,
        EventId: cty::c_uint,
    ) -> cty::c_int;
}
extern "C" {
    ///       Event parameter encoding functions
    pub fn SEGGER_SYSVIEW_EncodeU32(pPayload: *mut cty::c_uchar, Value: cty::c_ulong) -> *mut cty::c_uchar;
}
extern "C" {
    pub fn SEGGER_SYSVIEW_EncodeData(
        pPayload: *mut cty::c_uchar,
        pSrc: *const cty::c_char,
        Len: cty::c_uint,
    ) -> *mut cty::c_uchar;
}
extern "C" {
    pub fn SEGGER_SYSVIEW_EncodeString(
        pPayload: *mut cty::c_uchar,
        s: *const cty::c_char,
        MaxLen: cty::c_uint,
    ) -> *mut cty::c_uchar;
}
extern "C" {
    pub fn SEGGER_SYSVIEW_EncodeId(pPayload: *mut cty::c_uchar, Id: cty::c_ulong) -> *mut cty::c_uchar;
}
extern "C" {
    pub fn SEGGER_SYSVIEW_ShrinkId(Id: cty::c_ulong) -> cty::c_ulong;
}
extern "C" {
    ///       Middleware module registration
    pub fn SEGGER_SYSVIEW_RegisterModule(pModule: *mut SEGGER_SYSVIEW_MODULE);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_RecordModuleDescription(
        pModule: *const SEGGER_SYSVIEW_MODULE,
        sDescription: *const cty::c_char,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_SendModule(ModuleId: cty::c_uchar);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_SendModuleDescription();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_SendNumModules();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_PrintfHostEx(s: *const cty::c_char, Options: cty::c_ulong, ...);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_VPrintfHostEx(
        s: *const cty::c_char,
        Options: cty::c_ulong,
        pParamList: *mut va_list,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_PrintfTargetEx(s: *const cty::c_char, Options: cty::c_ulong, ...);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_VPrintfTargetEx(
        s: *const cty::c_char,
        Options: cty::c_ulong,
        pParamList: *mut va_list,
    );
}
extern "C" {
    pub fn SEGGER_SYSVIEW_PrintfHost(s: *const cty::c_char, ...);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_VPrintfHost(s: *const cty::c_char, pParamList: *mut va_list);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_PrintfTarget(s: *const cty::c_char, ...);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_VPrintfTarget(s: *const cty::c_char, pParamList: *mut va_list);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_WarnfHost(s: *const cty::c_char, ...);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_VWarnfHost(s: *const cty::c_char, pParamList: *mut va_list);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_WarnfTarget(s: *const cty::c_char, ...);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_VWarnfTarget(s: *const cty::c_char, pParamList: *mut va_list);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_ErrorfHost(s: *const cty::c_char, ...);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_VErrorfHost(s: *const cty::c_char, pParamList: *mut va_list);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_ErrorfTarget(s: *const cty::c_char, ...);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_VErrorfTarget(s: *const cty::c_char, pParamList: *mut va_list);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_Print(s: *const cty::c_char);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_Warn(s: *const cty::c_char);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_Error(s: *const cty::c_char);
}
extern "C" {
    ///       Run-time configuration functions
    pub fn SEGGER_SYSVIEW_EnableEvents(EnableMask: cty::c_ulong);
}
extern "C" {
    pub fn SEGGER_SYSVIEW_DisableEvents(DisableMask: cty::c_ulong);
}
extern "C" {
    ///       Application-provided functions
    pub fn SEGGER_SYSVIEW_Conf();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_X_GetTimestamp() -> cty::c_ulong;
}
extern "C" {
    pub fn SEGGER_SYSVIEW_X_GetInterruptId() -> cty::c_ulong;
}
extern "C" {
    pub fn SEGGER_SYSVIEW_X_StartComm();
}
extern "C" {
    pub fn SEGGER_SYSVIEW_X_OnEventRecorded(NumBytes: cty::c_uint);
}
